core/include/foundry_local_mobile/flm_api.h

/** Semantic version of this library, e.g. "0.2.0". Owned by the library. */
FLM_EXPORT const char* FLM_CALL flm_version_string(void) FLM_NOEXCEPT;
/** ABI version this build implements. Bindings compare against FLM_API_VERSION. */
FLM_EXPORT uint32_t FLM_CALL flm_api_version(void) FLM_NOEXCEPT;
/** Version of the underlying OGA runtime. NULL if unavailable. */
FLM_EXPORT const char* FLM_CALL flm_runtime_version_string(void) FLM_NOEXCEPT;
/** Free a string returned by this library through an out-parameter. NULL is a no-op. */
FLM_EXPORT void FLM_CALL flm_string_free(char* str) FLM_NOEXCEPT;
/**
 * Install a process-wide log sink. Pass NULL to remove it.
 * The callback may be invoked from any thread, including during flm_manager_create.
 */
FLM_EXPORT flm_status FLM_CALL flm_set_log_callback(flm_log_callback callback, void* user_data) FLM_NOEXCEPT;
/** Set the minimum level forwarded to the log sink. Defaults to FLM_LOG_WARNING. */
FLM_EXPORT flm_status FLM_CALL flm_set_log_level(flm_log_level level) FLM_NOEXCEPT;
/** Whether the runtime library is present and loadable. Never throws or logs on failure. */
FLM_EXPORT int32_t FLM_CALL flm_is_runtime_available(void) FLM_NOEXCEPT;
/* =========================================================================
 * Errors
 * ========================================================================= */

/** Human-readable message for the last failure on this thread. Never NULL; "" if none. */
FLM_EXPORT const char* FLM_CALL flm_last_error_message(void) FLM_NOEXCEPT;
/** Machine-readable detail for the last failure on this thread. Never NULL. */
FLM_EXPORT const char* FLM_CALL flm_last_error_detail_json(void) FLM_NOEXCEPT;
/** Clear the last-error state for this thread. */
FLM_EXPORT void FLM_CALL flm_clear_last_error(void) FLM_NOEXCEPT;
/* =========================================================================
 * Manager
 *
 * The manager owns the runtime, the model registry and the job pool. Create one
 * per process; creating several is legal but wasteful.
 * ========================================================================= */

/**
 * Create a manager from a JSON configuration.
 *
 * {
 *   "app_name": "my-app",                     // required, non-empty
 *   "app_data_dir": "/data/.../files/foundry",// optional: metadata directory
 *   "log_level": "warning",                   // optional
 *   "auto_unload_on_background": true,        // optional, default true
 *   "job_pool_threads": 0,                    // optional, 0 = derive from core count
 *   "additional_options": { "key": "value" }  // optional passthrough to the runtime
 * }
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_create(const char* config_json, flm_manager* out_manager) FLM_NOEXCEPT;
/**
 * Begin graceful shutdown: stop accepting work, cancel in-flight jobs, unload models.
 * Idempotent. Pending completion callbacks still fire, with FLM_ERROR_CANCELLED.
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_shutdown(flm_manager manager) FLM_NOEXCEPT;
/**
 * Release the manager. Blocks until outstanding jobs have finished unwinding.
 * All handles derived from this manager become invalid.
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_release(flm_manager manager) FLM_NOEXCEPT;
/**
 * Describe the device: SoC, memory, accelerators and EP preference order.
 * Caller frees `out_json` with flm_string_free().
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_get_device_profile_json(flm_manager manager, char** out_json) FLM_NOEXCEPT;
/**
 * Notify the core of an OS lifecycle transition. Bindings wire this to the platform's
 * notifications automatically; apps rarely call it directly.
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_notify_lifecycle(flm_manager manager,
                                                            flm_lifecycle_event event) FLM_NOEXCEPT;
/**
 * Update mutable runtime settings without recreating the manager. Currently
 * `log_level` and `auto_unload_on_background`.
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_update_settings(flm_manager manager,
                                                           const char* settings_json) FLM_NOEXCEPT;
/* =========================================================================
 * Model loading
 *
 * The SDK is path-only: callers provide a local ONNX Runtime GenAI model directory.
 * There is no catalog, no SDK-managed download, and no transport layer.
 * ========================================================================= */

/**
 * Validate a local model directory, load it through ONNX Runtime GenAI, register a
 * model handle, and return metadata.
 *
 * `model_path` must be a path to a directory containing genai_config.json (a flat OGA
 * model) or an .ortpackage directory that OGA can load.
 *
 * `options_json` may be NULL, or:
 * {
 *   "execution_provider": "QNN",     // optional: override auto-selected EP
 *   "provider_options": {            // optional: EP-specific key/value options
 *     "backend_path": "libQnnHtp.so"
 *   }
 * }
 *
 * The model path is caller-owned and must not be deleted while the model is loaded.
 *
 * The job's result is:
 * {
 *   "model_handle": 42,
 *   "path": "/data/.../models/phi",
 *   "name": "phi-4-mini",
 *   "task": "chat-completion",
 *   "execution_provider": "CPU",
 *   "device": "cpu",
 *   "file_size_bytes": 542113792,
 *   "is_loaded": true
 * }
 */
FLM_EXPORT flm_status FLM_CALL flm_manager_load_model_async(flm_manager manager,
                                                            const char* model_path,
                                                            const char* options_json,
                                                            flm_progress_callback on_progress,
                                                            flm_completion_callback on_complete,
                                                            void* user_data,
                                                            flm_job* out_job) FLM_NOEXCEPT;
/* =========================================================================
 * Model
 *
 * An flm_model handle refers to a loaded model backed by OGA.
 * The model path is always caller-owned; the SDK never deletes it.
 * ========================================================================= */

/** Release a model handle. The underlying model files on disk are not touched. */
FLM_EXPORT flm_status FLM_CALL flm_model_release(flm_model model) FLM_NOEXCEPT;
/**
 * Model metadata as JSON. Caller frees with flm_string_free().
 */
FLM_EXPORT flm_status FLM_CALL flm_model_get_info_json(flm_model model, char** out_json) FLM_NOEXCEPT;
/** Whether the model's files are present at its path. */
FLM_EXPORT flm_status FLM_CALL flm_model_is_cached(flm_model model, int32_t* out_cached) FLM_NOEXCEPT;
/** Whether the model is currently loaded into memory. */
FLM_EXPORT flm_status FLM_CALL flm_model_is_loaded(flm_model model, int32_t* out_loaded) FLM_NOEXCEPT;