bindings/flutter/lib/src/bindings/bindings.dart

// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.

// GENERATED FILE — regenerate with `dart run ffigen --config ffigen.yaml`.
//
// This file is checked in so consumers do not need libclang installed to build the
// plugin. It is hand-maintained in exactly the shape ffigen would produce (see
// `ffigen.yaml`) so switching back to generated output is a single tool run away.
//
// The raw bindings are intentionally private to this package (`lib/src/`); the
// idiomatic Dart surface lives in `foundry_local_mobile.dart` and the classes it
// re-exports.

// ignore_for_file: type=lint, unused_import, unused_field, non_constant_identifier_names
// ignore_for_file: camel_case_types, constant_identifier_names

import 'dart:ffi' as ffi;

/// Raw FFI bindings for `flm_*` — the flat C ABI exposed by
/// `core/include/foundry_local_mobile/flm_api.h`.
///
/// The class is a thin resolver over a `DynamicLibrary`. There is exactly one
/// instance per process, held by [NativeLibrary]. All handles cross as `Uint64`
/// (Dart `int`) and every payload crosses as UTF-8 JSON (`Pointer<Utf8>`).
class FlmBindings {
  /// Holds the symbol lookup function used to resolve each entry point.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// Bind against an already-opened `DynamicLibrary`.
  FlmBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// Bind against a caller-supplied symbol lookup. Useful for statically linked
  /// builds (iOS) where the runtime library is the app executable itself.
  FlmBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  // ---------------------------------------------------------------------------
  // Library-wide
  // ---------------------------------------------------------------------------

  ffi.Pointer<ffi.Char> flm_version_string() =>
      _flm_version_string();
  late final _flm_version_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'flm_version_string');
  late final _flm_version_string =
      _flm_version_stringPtr.asFunction<ffi.Pointer<ffi.Char> Function()>(
          isLeaf: true);

  int flm_api_version() => _flm_api_version();
  late final _flm_api_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('flm_api_version');
  late final _flm_api_version =
      _flm_api_versionPtr.asFunction<int Function()>(isLeaf: true);

  ffi.Pointer<ffi.Char> flm_runtime_version_string() =>
      _flm_runtime_version_string();
  late final _flm_runtime_version_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'flm_runtime_version_string');
  late final _flm_runtime_version_string =
      _flm_runtime_version_stringPtr.asFunction<ffi.Pointer<ffi.Char> Function()>(
          isLeaf: true);

  void flm_string_free(ffi.Pointer<ffi.Char> str) => _flm_string_free(str);
  late final _flm_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'flm_string_free');
  late final _flm_string_free = _flm_string_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true);

  int flm_set_log_callback(
    flm_log_callback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) =>
      _flm_set_log_callback(callback, user_data);
  late final _flm_set_log_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              flm_log_callback, ffi.Pointer<ffi.Void>)>>('flm_set_log_callback');
  late final _flm_set_log_callback = _flm_set_log_callbackPtr.asFunction<
      int Function(flm_log_callback, ffi.Pointer<ffi.Void>)>();

  int flm_set_log_level(int level) => _flm_set_log_level(level);
  late final _flm_set_log_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'flm_set_log_level');
  late final _flm_set_log_level =
      _flm_set_log_levelPtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_is_runtime_available() => _flm_is_runtime_available();
  late final _flm_is_runtime_availablePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'flm_is_runtime_available');
  late final _flm_is_runtime_available =
      _flm_is_runtime_availablePtr.asFunction<int Function()>(isLeaf: true);

  // ---------------------------------------------------------------------------
  // Errors
  // ---------------------------------------------------------------------------

  ffi.Pointer<ffi.Char> flm_last_error_message() => _flm_last_error_message();
  late final _flm_last_error_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'flm_last_error_message');
  late final _flm_last_error_message = _flm_last_error_messagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>(isLeaf: true);

  ffi.Pointer<ffi.Char> flm_last_error_detail_json() =>
      _flm_last_error_detail_json();
  late final _flm_last_error_detail_jsonPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'flm_last_error_detail_json');
  late final _flm_last_error_detail_json = _flm_last_error_detail_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>(isLeaf: true);

  void flm_clear_last_error() => _flm_clear_last_error();
  late final _flm_clear_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('flm_clear_last_error');
  late final _flm_clear_last_error =
      _flm_clear_last_errorPtr.asFunction<void Function()>(isLeaf: true);

  // ---------------------------------------------------------------------------
  // Manager
  // ---------------------------------------------------------------------------

  int flm_manager_create(
    ffi.Pointer<ffi.Char> config_json,
    ffi.Pointer<ffi.Uint64> out_manager,
  ) =>
      _flm_manager_create(config_json, out_manager);
  late final _flm_manager_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint64>)>>('flm_manager_create');
  late final _flm_manager_create = _flm_manager_createPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_manager_shutdown(int manager) => _flm_manager_shutdown(manager);
  late final _flm_manager_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_manager_shutdown');
  late final _flm_manager_shutdown =
      _flm_manager_shutdownPtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_manager_release(int manager) => _flm_manager_release(manager);
  late final _flm_manager_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_manager_release');
  late final _flm_manager_release =
      _flm_manager_releasePtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_manager_get_device_profile_json(
    int manager,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) =>
      _flm_manager_get_device_profile_json(manager, out_json);
  late final _flm_manager_get_device_profile_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('flm_manager_get_device_profile_json');
  late final _flm_manager_get_device_profile_json =
      _flm_manager_get_device_profile_jsonPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>(isLeaf: true);

  int flm_manager_notify_lifecycle(int manager, int event) =>
      _flm_manager_notify_lifecycle(manager, event);
  late final _flm_manager_notify_lifecyclePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64, ffi.Int32)>>('flm_manager_notify_lifecycle');
  late final _flm_manager_notify_lifecycle = _flm_manager_notify_lifecyclePtr
      .asFunction<int Function(int, int)>(isLeaf: true);

  int flm_manager_update_settings(
    int manager,
    ffi.Pointer<ffi.Char> settings_json,
  ) =>
      _flm_manager_update_settings(manager, settings_json);
  late final _flm_manager_update_settingsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Char>)>>('flm_manager_update_settings');
  late final _flm_manager_update_settings = _flm_manager_update_settingsPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>(isLeaf: true);

  // ---------------------------------------------------------------------------
  // Model loading
  // ---------------------------------------------------------------------------

  int flm_manager_load_model_async(
    int manager,
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<ffi.Char> options_json,
    flm_progress_callback on_progress,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_manager_load_model_async(
          manager,
          model_path,
          options_json,
          on_progress,
          on_complete,
          user_data,
          out_job);
  late final _flm_manager_load_model_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              flm_progress_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>('flm_manager_load_model_async');
  late final _flm_manager_load_model_async =
      _flm_manager_load_model_asyncPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              flm_progress_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  // ---------------------------------------------------------------------------
  // Model
  // ---------------------------------------------------------------------------

  int flm_model_release(int model) => _flm_model_release(model);
  late final _flm_model_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_model_release');
  late final _flm_model_release =
      _flm_model_releasePtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_model_get_info_json(
    int model,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) =>
      _flm_model_get_info_json(model, out_json);
  late final _flm_model_get_info_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('flm_model_get_info_json');
  late final _flm_model_get_info_json = _flm_model_get_info_jsonPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>(isLeaf: true);

  int flm_model_is_cached(int model, ffi.Pointer<ffi.Int32> out_cached) =>
      _flm_model_is_cached(model, out_cached);
  late final _flm_model_is_cachedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64, ffi.Pointer<ffi.Int32>)>>('flm_model_is_cached');
  late final _flm_model_is_cached = _flm_model_is_cachedPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int32>)>(isLeaf: true);

  int flm_model_is_loaded(int model, ffi.Pointer<ffi.Int32> out_loaded) =>
      _flm_model_is_loaded(model, out_loaded);
  late final _flm_model_is_loadedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64, ffi.Pointer<ffi.Int32>)>>('flm_model_is_loaded');
  late final _flm_model_is_loaded = _flm_model_is_loadedPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int32>)>(isLeaf: true);
